# local_llm_runner

./: .env  .env.example  README.md  app.py  llm_client.py  main.py  principles.json  prompt_builder.py  pyproject.toml  run_llm.py  utils.py  utils_prompt_classifier.py
docs/plans/: 2026-01-22-mull-redesign.md
mull/: __init__.py  cli.py  client.py  pipeline.py  principles.py  prompts.py
pipelines/: base_pipeline.py  creative_pipeline.py  emotional_pipeline.py  identity_pipeline.py  philosophical_pipeline.py  power_pipeline.py  product_pipeline.py  router.py  simple_pipeline.py  social_pipeline.py  technical_pipeline.py  venture_pipeline.py  vision_pipeline.py
utils/: __init__.py  cleaning.py  formatting.py  prompt_classifier.py  prompt_router.py  utils_prompt_classifier.py
