[project]
name = "mull"
version = "0.1.0"
description = "A CLI thinking partner that critiques and refines its own responses"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[project.scripts]
mull = "mull.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mull*"]
